$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- add kernel patch for vr(4) lockups after link flaps (e.g. on ALIX boards)

- Add support for dns forward wildcard, use * as hostname
- Add SixXS interface to traffic Graph

---
- Update text for WAN RA, to suggest this is normally off
- Fix ipv6 link local filter rule, missing newline
- Fix dhcpv4 having ipv6 address inserted in dhcpd.conf
- Make motherboard monitor off by default, and switchable in advanced/misc.

1.31
----
- added patch to ISC-DHCPD to rewrite lease file every 5 minutes instead of
  every hour

- added fix for OpenSSL session renegotiation vulnerability

---
- tidy page description in group manager for interfaces_secondaries.php
- change auth.inc so when reaching an authorized page you get a message before redirect to /index.php 
  more intuitive, especially when sub pages are denied as the links to them are are displayed.
---
- add mbmon system fans/temp monitoring, requires /usr/local/bin/mbmon 
  will work with a reasonable % of pc hardware, won't work on soekris/alix etc.
---
- add option to disable spoof check on Bridge, removal of filtered bridge
  causes non-m0n0wall dhcp servers to break, and some multicast traffic.
---
- fix to WAN dhcp, cleanup dhclient pid and specify dhclient-script location.
---
- fix to adding dhcpv6 reservation is also added to dhcpv4
- allow input of duid in mac address field to a dhcpv6 reservation
---
- fix to allow linklocal addresses to communicate
---
- fix for dhcpdv6 firewall rule

---
- added log :-)

---
- add initial support for AYIYA in aiccu for Sixxs tunnels

---
- add 'strict order' to DNS forwarder.  Useful when using Sixxs DNS.  Use Sixxs as
  primary and isp as secondary, Then when tunnel is up, you get google via ipv6.
  see http://www.sixxs.net/tools/dnscache/ , you must have isp or similar dns as
  tunnel won't come up without working dns.